--- a/vc10/Resources.rc
+++ b/vc10/Resources.rc
@@ -3,7 +3,6 @@
 ID ICON "cinder_app_icon.ico"
 
 RES_BULLET
-RES_SHIP
 RES_SHIPMAP
 RES_ENEMY1
 RES_ENEMY2
@@ -13,3 +12,10 @@ RES_ENEMY5
 RES_ENEMY6
 RES_EBULLET1
 RES_EBULLET2
+RES_ENEMY7
+RES_ENEMY8		
+RES_ENEMY9
+RES_ENEMY10
+RES_MYHP
+RES_ENEMYHP			
+RES_EXPLODE			
