--- a/vc10/Resources.rc
+++ b/vc10/Resources.rc
@@ -19,3 +19,24 @@ RES_ENEMY10
 RES_MYHP
 RES_ENEMYHP			
 RES_EXPLODE			
+RES_BG				
+RES_LIFEBAR			
+RES_LIFEBARLIGHT	
+RES_LIFEBARCOVER	
+RES_PAUSE			
+RES_PLANE			
+RES_PLAYGLOW
+RES_POINTER			
+RES_QUITGLOW
+RES_HIGHGLOW
+RES_HELVETICA
+RES_INFINITY		
+RES_BACK			
+RES_CONTINUE		
+RES_CONTINUEGLOW	
+RES_PLAYGAME		
+RES_HIGHSCORE
+RES_QUIT
+RES_QUITGAME
+RES_RESUME
+RES_LASER
